WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33809
REGRESSION (
r53420
): incomplete repaint of bottom of bugs.webkit.org comment field
https://bugs.webkit.org/show_bug.cgi?id=33809
Summary
REGRESSION (r53420): incomplete repaint of bottom of bugs.webkit.org comment ...
mitz
Reported
2010-01-18 13:36:39 PST
<
http://trac.webkit.org/projects/webkit/changeset/53420
> introduced a repaint regression. On this page, if you slowly scroll the bottom of the comments field into view, the bottom does not paint. This is probably because the repaint logic considers the first and last line boxes, and the next-to-last line box has visible overflow that is greater than the last’s, which is just a TrailingFloatsRootInlineBox.
Attachments
Copy bottom overflow from the last root box to the trailing floats root box
(20.60 KB, patch)
2010-01-18 14:07 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-01-18 14:07:30 PST
Created
attachment 46846
[details]
Copy bottom overflow from the last root box to the trailing floats root box Includes a repaint test. No change to existing repaint tests’ results.
mitz
Comment 2
2010-01-18 14:20:36 PST
http://trac.webkit.org/projects/webkit/changeset/53432
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug