REGRESSION (r53420): incomplete repaint of bottom of bugs.webkit.org comment field https://bugs.webkit.org/show_bug.cgi?id=33809

Reviewed by Darin Adler.

WebCore:

Test: fast/repaint/trailing-floats-root-line-box-overflow.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::layoutInlineChildren): Copy bottom overflow from the last
root box to the trailing floats box, which is becoming the last root box. This is
needed because painting code assumes that the last line in a block is the one with the
lowest overflow bottom.

LayoutTests:

* fast/repaint/trailing-floats-root-line-box-overflow-expected.checksum: Added.
* fast/repaint/trailing-floats-root-line-box-overflow-expected.png: Added.
* fast/repaint/trailing-floats-root-line-box-overflow-expected.txt: Added.
* fast/repaint/trailing-floats-root-line-box-overflow.html: Added.



Canonical link: https://commits.webkit.org/44833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53432 268f45cc-cd09-0410-ab3c-d52691b4dbfc